# OsmAnd-core

./: README.md
OsmAnd-java/: build.xml
OsmAnd-java/src/com/google/protobuf/: TextFormat.java
OsmAnd-java/src/net/osmand/: PlatformUtil.java
OsmAnd-java/src/net/osmand/plus/routing/: RouteProvider.java
OsmAnd-java/src/net/osmand/router/: RoutingContext.java
native/include/: Common.h  Map.hpp
native/src/: BinaryIndex.hpp  ElapsedTimer.cpp  ElapsedTimer.h  MapIndex.hpp  PrecalculatedRouteDirection.cpp  PrecalculatedRouteDirection.hpp  RouteCalculationProgress.hpp  RouteSegment.hpp  RoutingConfiguration.hpp  RoutingContext.cpp  RoutingContext.hpp  RoutingIndex.hpp  SearchQuery.hpp  binaryMapIndexRead.cpp  binaryRead.cpp  binaryRead.h  binaryRoutePlanner.cpp  binaryRoutePlanner.h  binaryRoutingIndexRead.cpp  common.cpp  common2.h  generalRouter.cpp  generalRouter.h  java_renderRules.h  java_wrap.cpp  java_wrap.h  mapObjects.cpp  mapObjects.h  multipolygons.cpp  multipolygons.h  osmand_main.cpp  precalculatedRouteDirection.cpp  renderRules.cpp  renderRules.h  rendering.cpp  rendering.h  routeResultPreparation.cpp  textdraw.cpp
native/src/proto/: utils.hpp
targets/.cmake/: CMakeLists.txt
targets/.cmake/projects/OsmAndCore/: CMakeLists.txt
targets/.cmake/projects/libpng/: CMakeLists.txt
targets/.cmake/projects/protobuf/: CMakeLists.txt
targets/.cmake/projects/skia/: CMakeLists.txt
targets/.cmake/targets/: amd64-linux-gcc.cmake
targets/android/OsmAndCore/: Android.mk
targets/android/expat/: Android.mk
targets/android/freetype/: Android.mk
targets/android/giflib/: Android.mk
targets/android/jpeg/: Android.mk
targets/android/libpng/: Android.mk
targets/android/protobuf/: Android.mk
targets/android/skia/: Android.mk
